org.mmisw.ontmd: MMI Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$


2009-12-21   1.7.2.alpha
	Issue #213: ontology with hash fragment separator not handled appropriately
	Proper handling of new submission with *no* original namespace associated.
	See related changes in iserver module.
	

2009-12-06   1.7.1.alpha
	- If header is "URI" in first column of TermTable, then the cells are now links to open
	  the "HTML" version of the term using the "Ont" service. 
	  TODO: This was a quick way to enable this; a more appropriate mechanism is pending, for example,
	  dispatching the same ORR with the the term (using Hyperlink).
	
	  Sources modified: TermTable, VocabClassPanel, PopulateTermTableCommand
	  
	
2009-11-30   1.7.0.alpha
	- Setting version to 1.7.0.alpha reflecting all the 1.6.1+ changes below.
	  This is also sync'ed with iserver module.
	- Current Ont version: MMI Ontology and Term URI Resolver. Version 1.4.2.beta (20091125194637)
	
	Issue 146: metadata panel: improve display including clickable URL when possible
	- Now with clickable links. See Util.isUrl(String str) and call in MetadataGroupPanel.ViewOnlyCell
	  This only applies when the whole attribute value matches a URL regex.
	  TODO: detect and make clickable links for URLs embedded in a single value. Because of
	  GWT limitations in the emulation of the JRE library, this may require help from the server side. 
	  
	
2009-11-24   1.6.2.alpha7
	Issue 146: metadata panel: improve display including clickable URL when possible
	- some improvement in display of metadata in view-only mode: not using
	  a textbox but HTML. This is also preparation to include clickable links.
	  
	- direct visit to ...#voc2rdf and ...#vine didn't properly check that the user
	  may be already logged in. Now it goes to the tool immediately if the user is logged in.
	  
	  
2009-11-24   1.6.2.alpha6
	- User account creation improved. Upon creation, the interface goes to the
	  update mode of the panel.